<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#30ca00" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:text="@string/rateit" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/later"
        android:background="#669900"
        android:textColor="#fff" />

    <Button
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dontremember"
        android:background="#000"
        android:textColor="#7b7b7b" />

</LinearLayout>
